# Image-processing-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  test_main.http  test_main.http.httpbook
alembic/: env.py
alembic/versions/: 37090beac0a4_initial_schema.py
app/: main.py  schemas.py
app/auth/: dependencies.py  router.py  utils.py
app/core/: config.py  rate_limiter.py
app/db/: models.py  session.py
app/images/: router.py
app/storage/: client.py
app/transforms/: processor.py
docs/: r2-setup.md
tests/: conftest.py  test_auth_endpoints.py  test_auth_utils.py  test_image_endpoints.py  test_transform_endpoint.py
